k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: running-app
  labels:
    name: running-app
    environment: production
